[package]
name = "naga-wasm"
version = "0.1.0"
authors = ["ArcheGraphics"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib"]

[dependencies.naga]
version = "0.19"
path = "../wgpu/naga"
features = [
    "compact",
    "wgsl-in",
    "wgsl-out",
    "glsl-in",
    "glsl-out",
    "spv-in",
    "spv-out",
    "msl-out",
    "hlsl-out",
    "dot-out",
    "serialize",
    "deserialize",
]

[dependencies]
wasm-bindgen = "0.2.79"
wee_alloc = { version = "0.4.5", optional = true }
#naga = { git = "https://github.com/gfx-rs/naga", features = ["glsl-in", "wgsl-out"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console'
]